# Mujoco_ROS2

./: DummyTorsoMovil.xml  README.md  mujoco_params.yaml
meshes/: Antebrazo_Derecho.STL  Antebrazo_Izquierdo.STL  Brazo_Derecho.STL  Brazo_Izquierdo.STL  Dedos_Derecho.STL  Dedos_Izquierdo.STL  Mano_Derecha.STL  Mano_Izquierda.STL  Muslo_Derecho.STL  Muslo_Izquierdo.STL  Pierna_Derecha.STL  Pierna_Izquierda.STL  Piso.STL  Tobillo_Derecho.STL  Tobillo_Izquierdo.STL  Torso.STL  Tronco.STL
mujoco_bridge/: package.xml  setup.cfg  setup.py
mujoco_bridge/mujoco_bridge/: bridge.py  plot_logger.py  pub_demo.py  pub_demo_v0.py  pub_demo_v1.py  pub_demo_v2.py  pub_demo_v4.py
mujoco_bridge/mujoco_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
