<?xml version="1.0"?>
<package format="3">
  <name>mujoco_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 MuJoCo control bridge</description>
  <maintainer email="fernando305.fm@gmail.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
